lab1/Test/L1-A-0-24.output
Error Type A at Line 7
Error Type A at Line 13
Error Type A at Line 20
Error Type A at Line 34
Error Type A at Line 41
